<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_fav"
        android:icon="@android:drawable/btn_star"
        app:showAsAction="ifRoom"
        android:title="Favourite">
    </item>
    <item
        android:id="@+id/action_share"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"
        android:title="Share">
    </item>
</menu>