<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/newsFragment">
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.cba.inewsapp.ui.NewsFragment"
        android:label="NewsFragment" >
        <action
            android:id="@+id/to_detailItem"
            app:destination="@id/newsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailFragment"
        android:name="com.cba.inewsapp.ui.NewsDetailFragment"
        android:label="NewsDetailFragment" />
</navigation>